# Nvidia-AI-Startup-Radar

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
docs/: CLAUDE.md  tap.md
docs/referencias/: estado-e-roadmap.md  estudo-materiais-textuais.md  estudo-videos.md  tranc_youtube.md
frontend/: app.py
scripts/: analyze_catalog.py  ask_nvidia.py  check_openrouter.py  classify_startup.py  collect_startup.py  ingest_nvidia.py  init_db.py  init_qdrant.py  market_radar.py  run_radar.py  scrape_site.py  search_nvidia.py
src/agents/: briefing.py  classifier.py  evidence_validator.py  extractor.py  github.py  llm.py  nvidia_rag.py  recommender.py  scraper.py  search_planner.py
src/db/: catalog.py  market.py  models.py  repository.py  session.py
src/graph/: pipeline.py  routing.py  state.py
src/rag/: chunking.py  embeddings.py  generation.py  ingestion.py  reranker.py  retrieval.py  vector_store.py
src/scraping/: github_scraper.py  scrapling_fetcher.py  site_collector.py  trafilatura_parser.py
