[project]
name = "nvidia-ai-startup-radar"
version = "0.1.0"
description = "Plataforma multi-agente para mapear, classificar e recomendar tecnologias NVIDIA para startups brasileiras de IA (NVIDIA Inception)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "langgraph>=1.2.6",
    "openai>=2.41.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "scrapling[fetchers]>=0.4.9",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "trafilatura>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/graph",
    "src/rag",
    "src/scraping",
    "src/enrichment",
    "src/db",
]
